infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureshare-backend-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: secureshare-backend
