infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secureshare-ingress
  namespace: default
spec:
  rules:
  - host: api.secureshare.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secureshare-backend-service
            port:
              number: 80
